--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "axios-api-versioning": "^3.0.0",
     "downshift": "^6.1.12",
     "framer-motion": "^7.10.3",
+    "i18next": "^22.4.15",
+    "i18next-react": "^0.2.2",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-component-export-image": "^1.0.6",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-i18next": "^12.2.2",
     "react-laag": "^2.0.5",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
