--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^16.18.24",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^0.18.1",
     "axios-api-versioning": "^3.0.0",
     "downshift": "^6.1.12",
@@ -29,10 +30,12 @@
     "react": "^18.2.0",
     "react-component-export-image": "^1.0.6",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.43.9",
     "react-i18next": "^12.2.2",
     "react-laag": "^2.0.5",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
@@ -67,6 +70,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.194",
+    "@types/react-helmet": "^6.1.6",
     "@types/redux-logger": "^3.0.9",
     "@types/styled-components": "^5.1.26"
   }
